objects/Community_Member__c.object
<CustomObject>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Community Members</relationshipLabel>
        <relationshipName>Community_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Member</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Community Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>